--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,7 +38,7 @@ form{
 
 ul li h3{
     font-family: "audiowide";
-    margin-right: 710px;
+    margin-right: 315px;
 }
 ul li h3::first-letter{
     color: darkgray;
@@ -53,7 +53,7 @@ section{
     color: darkgray;
 }
 #myPic{
-    height: 550px;
+    height: 600px;
     border-radius: 80px; 
 }
 #Pic{
@@ -63,8 +63,8 @@ section{
 #submit{
     background-color: darkgray;
     border-radius: 20px;
-    width: 100px;
-    height: 50px;
+    width: 80px;
+    height: 38px;
     border: 1px black solid;
 }
 #submit:hover{
@@ -74,11 +74,84 @@ section{
 #netlify{
     background-color: blue;
     border-radius: 20px;
-    width: 100px;
-    height: 50px;
+    width: 80px;
+    height: 38px;
     border: 1px navy solid;
 }
 #netlify:hover{
     color: black;
     background-color: navy;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
+.container1 {
+    position : relative;
+    width : 1000px;
+    display :flex;
+    align-items : center;
+    /* justify-content : center; */
+    /* flex-warp : warp; */
+    padding : 30px;
+  }
+  .container1 .card {
+    position: relative;
+    width : 300px;
+    height : 170px;
+    background-color : #ffffff00;
+    margin : 0px;
+    padding : 1rem;
+    display : flex;
+    flex-direction : column;
+    box-shadow : 0 5px 20px rgba(0,0,0,0.5);
+    transition : 1s ease-in-out;
+    border-radius : 15px;
+    align-items: center;
+  }
+  .container1 .card:hover {
+    height : 310px;
+  }
+  .container1 .card-img-top {
+    position : relative;
+    width : 280px;
+    height : 280px;
+    top : -20%;
+    /* box-shadow : 0 5px 20px rgba(0,0,0,0.2); */
+    z-index : 1;
+    align-items: center;
+  }
+  .container1 .card .card-img-top {
+    max-width : 100%;
+    border-radius : 20px;
+  }
+  .container1 .card .card-body {
+    position : relative;
+    top : -60px;
+    padding : 10px 15px;
+    color : #111;
+    text-align : center;
+    visibility : hidden;
+    opacity : 0;
+    transition : 0.7s ease-in-out;
+  }
+  .container1 .card:hover .card-body {
+     margin-top : 25px;
+     visibility : visible;
+     opacity : 1;
+     transition-delay: 0.2s;
+  }
+  .container1 .card:hover .card-text{
+    margin-top: 15px;
+  }
+  .info{
+    position: relative;
+    right: 30%;
+    text-align: center;
+  }
+  #Pfp{
+    position: relative;
+    right: 9%;
+    height: 400px;
+    border-radius: 35%;
+  }
