--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,3 +158,13 @@ a{
     height: 360px;
     border-radius: 35%;
 }
+@media screen and (max-width: 999px)  {
+    #card{
+        position: relative;
+        right: 80px;
+    }
+    #form{
+        position: relative;
+        left: 40px;
+    }
+}
